<?xml version="1.0" encoding="UTF-8"?>
<project
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
	xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
	<modelVersion>4.0.0</modelVersion>
	<groupId>org.eclipse.gmf.runtime</groupId>
	<artifactId>org.eclipse.gmf.runtime.releng</artifactId>
	<version>1.16.6-SNAPSHOT</version>
	<packaging>pom</packaging>

	<!-- this is the parent POM from which all modules inherit common settings -->
	<properties>
		<tycho-version>4.0.10</tycho-version>
		<cbi-plugins.version>1.5.2</cbi-plugins.version>
		<antrun-version>3.0.0</antrun-version>
		<platform>2022-09</platform>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<tycho.scmUrl>scm:git:https://github.com/eclipse-gmf-runtime/gmf-runtime.git</tycho.scmUrl>
	</properties>

	<build>
		<plugins>
			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>tycho-maven-plugin</artifactId>
				<version>${tycho-version}</version>
				<extensions>true</extensions>
			</plugin>
			<plugin>
			    <groupId>org.eclipse.tycho</groupId>
			    <artifactId>tycho-compiler-plugin</artifactId>
			    <version>${tycho-version}</version>
			    <configuration>
			       <source>17</source>
			       <target>17</target>
			       <compilerArgs>
			          <arg>--module-path</arg>
			          <arg>${java.home}/jmods</arg>
			          <arg>--add-modules</arg>
			          <arg>jdk.xml.dom</arg>
			       </compilerArgs>
			    </configuration>
			</plugin>
			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>tycho-source-plugin</artifactId>
				<version>${tycho-version}</version>
				<executions>
					<execution>
						<id>plugin-source</id>
						<goals>
							<goal>plugin-source</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>tycho-packaging-plugin</artifactId>
				<version>${tycho-version}</version>
				<configuration>
					<sourceReferences>
						<generate>true</generate>
					</sourceReferences>
				</configuration>
				<dependencies>
					<dependency>
						<groupId>org.eclipse.tycho.extras</groupId>
						<artifactId>tycho-sourceref-jgit</artifactId>
						<version>${tycho-version}</version>
					</dependency>
				</dependencies>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-antrun-plugin</artifactId>
				<version>${antrun-version}</version>
				<executions>
					<execution>
						<id>replace-build-token</id>
						<phase>generate-sources</phase>
						<configuration>
							<target>
								<taskdef
									resource="net/sf/antcontrib/antcontrib.properties"
									classpathref="maven.plugin.classpath" />
								<if>
									<available file="about.mappings" />
									<then>
										<echo
											message="Replacing @build@ token within about.mappings with build id" />
										<replace file="about.mappings">
											<replacefilter token="@build@"
												value="${unqualifiedVersion}.${buildQualifier}" />
										</replace>
									</then>
								</if>
								<if>
									<available file="javadocOptions.txt" />
									<then>
										<echo
											message="Replacing @build@ token within javadocOptions.txt with build id" />
										<replace file="javadocOptions.txt">
											<replacefilter token="@build@"
												value="${unqualifiedVersion}.${buildQualifier}" />
										</replace>
									</then>
								</if>
							</target>
						</configuration>
						<goals>
							<goal>run</goal>
						</goals>
					</execution>
					<execution>
						<id>replace-back-build-token</id>
						<phase>install</phase>
						<configuration>
							<target>
								<taskdef
									resource="net/sf/antcontrib/antcontrib.properties"
									classpathref="maven.plugin.classpath" />
								<if>
									<available file="about.mappings" />
									<then>
										<echo
											message="Replacing back build id within about.mappings with @build@ token" />
										<replace file="about.mappings">
											<replacefilter
												token="${unqualifiedVersion}.${buildQualifier}"
												value="@build@" />
										</replace>
									</then>
								</if>
								<if>
									<available file="javadocOptions.txt" />
									<then>
										<echo
											message="Replacing back build id within javadocOptions.txt with @build@ token" />
										<replace file="javadocOptions.txt">
											<replacefilter
												token="${unqualifiedVersion}.${buildQualifier}"
												value="@build@" />
										</replace>
									</then>
								</if>
							</target>
						</configuration>
						<goals>
							<goal>run</goal>
						</goals>
					</execution>
				</executions>
				<dependencies>
					<dependency>
						<groupId>ant-contrib</groupId>
						<artifactId>ant-contrib</artifactId>
						<version>20020829</version>
					</dependency>
				</dependencies>
			</plugin>
		</plugins>
	</build>

	<profiles>
		<profile>
			<id>gmf-runtime.target</id>
			<activation>
				<activeByDefault>true</activeByDefault>
			</activation>
			<build>
				<plugins>
					<plugin>
						<groupId>org.eclipse.tycho</groupId>
						<artifactId>target-platform-configuration</artifactId>
						<version>${tycho-version}</version>
						<configuration>
							<!-- add target file content to target platform -->
							<target>
								<artifact>
									<groupId>org.eclipse.gmf.runtime</groupId>
									<artifactId>org.eclipse.gmf.runtime.target</artifactId>
									<version>1.16.6-SNAPSHOT</version>
									<classifier>${platform}</classifier>
								</artifact>
							</target>
							<environments>
								<environment>
									<os>linux</os>
									<ws>gtk</ws>
									<arch>x86_64</arch>
								</environment>
								<environment>
									<os>win32</os>
									<ws>win32</ws>
									<arch>x86_64</arch>
								</environment>
								<environment>
									<os>macosx</os>
									<ws>cocoa</ws>
									<arch>x86_64</arch>
								</environment>
							</environments>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
		<profile>
			<id>sign</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.eclipse.cbi.maven.plugins</groupId>
						<artifactId>eclipse-jarsigner-plugin</artifactId>
						<version>${cbi-plugins.version}</version>
						<executions>
							<execution>
								<id>sign</id>
								<phase>verify</phase>
								<goals>
									<goal>sign</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>

	<pluginRepositories>
		<pluginRepository>
			<id>CBI</id>
			<url>https://repo.eclipse.org/content/repositories/cbi-releases/</url>
		</pluginRepository>
	</pluginRepositories>

	<modules>
		<module>../org.eclipse.gmf.runtime.target</module>
		<module>../../bundles/org.eclipse.gmf</module>
		<module>../../bundles/org.eclipse.gmf.runtime.common.core</module>
		<module>../../bundles/org.eclipse.gmf.runtime.common.ui</module>
		<module>../../bundles/org.eclipse.gmf.runtime.common.ui.action</module>
		<module>../../bundles/org.eclipse.gmf.runtime.common.ui.action.ide</module>
		<module>../../bundles/org.eclipse.gmf.runtime.common.ui.printing</module>
		<module>../../bundles/org.eclipse.gmf.runtime.common.ui.printing.win32</module>
		<module>../../bundles/org.eclipse.gmf.runtime.common.ui.services</module>
		<module>../../bundles/org.eclipse.gmf.runtime.common.ui.services.action</module>
		<module>../../bundles/org.eclipse.gmf.runtime.common.ui.services.dnd</module>
		<module>../../bundles/org.eclipse.gmf.runtime.common.ui.services.dnd.ide</module>
		<module>../../bundles/org.eclipse.gmf.runtime.common.ui.services.properties</module>
		<module>../../bundles/org.eclipse.gmf.runtime.draw2d.ui</module>
		<module>../../bundles/org.eclipse.gmf.runtime.draw2d.ui.render</module>
		<module>../../bundles/org.eclipse.gmf.runtime.draw2d.ui.render.awt</module>
		<module>../../bundles/org.eclipse.gmf.runtime.gef.ui</module>
		<module>../../bundles/org.eclipse.gmf.runtime.emf.clipboard.core</module>
		<module>../../bundles/org.eclipse.gmf.runtime.emf.commands.core</module>
		<module>../../bundles/org.eclipse.gmf.runtime.emf.core</module>
		<module>../../bundles/org.eclipse.gmf.runtime.emf.type.core</module>
		<module>../../bundles/org.eclipse.gmf.runtime.emf.type.ui</module>
		<module>../../bundles/org.eclipse.gmf.runtime.emf.ui</module>
		<module>../../bundles/org.eclipse.gmf.runtime.emf.ui.properties</module>
		<module>../../bundles/org.eclipse.gmf.runtime.notation.providers</module>
		<module>../../bundles/org.eclipse.gmf.runtime.diagram.core</module>
		<module>../../bundles/org.eclipse.gmf.runtime.diagram.ui</module>
		<module>../../bundles/org.eclipse.gmf.runtime.diagram.ui.actions</module>
		<module>../../bundles/org.eclipse.gmf.runtime.diagram.ui.dnd</module>
		<module>../../bundles/org.eclipse.gmf.runtime.diagram.ui.geoshapes</module>
		<module>../../bundles/org.eclipse.gmf.runtime.diagram.ui.printing</module>
		<module>../../bundles/org.eclipse.gmf.runtime.diagram.ui.printing.render</module>
		<module>../../bundles/org.eclipse.gmf.runtime.diagram.ui.properties</module>
		<module>../../bundles/org.eclipse.gmf.runtime.diagram.ui.providers</module>
		<module>../../bundles/org.eclipse.gmf.runtime.diagram.ui.providers.ide</module>
		<module>../../bundles/org.eclipse.gmf.runtime.diagram.ui.render</module>
		<module>../../bundles/org.eclipse.gmf.runtime.diagram.ui.resources.editor</module>
		<module>../../bundles/org.eclipse.gmf.runtime.diagram.ui.resources.editor.ide</module>
		<module>../../bundles/org.eclipse.gmf.runtime.sdk</module>
		<module>../../bundles/org.eclipse.gmf.examples.runtime</module>
		<module>../../bundles/org.eclipse.gmf.examples.runtime.common.service</module>
		<module>../../bundles/org.eclipse.gmf.examples.runtime.diagram.decorator</module>
		<module>../../bundles/org.eclipse.gmf.examples.runtime.diagram.geoshapes</module>
		<module>../../bundles/org.eclipse.gmf.examples.runtime.diagram.layout</module>
		<module>../../bundles/org.eclipse.gmf.examples.runtime.diagram.logic</module>
		<module>../../bundles/org.eclipse.gmf.examples.runtime.diagram.logic.model</module>
		<module>../../bundles/org.eclipse.gmf.examples.runtime.diagram.logic.model.edit</module>
		<module>../../bundles/org.eclipse.gmf.examples.runtime.diagram.logic.model.editor</module>
		<module>../../bundles/org.eclipse.gmf.examples.runtime.emf.clipboard</module>
		<module>../../bundles/org.eclipse.gmf.examples.runtime.ui.pde</module>
		<module>../../bundles/org.eclipse.gmf.tests.runtime.common.core</module>
		<module>../../bundles/org.eclipse.gmf.tests.runtime.common.ui</module>
		<module>../../bundles/org.eclipse.gmf.tests.runtime.common.ui.services</module>
		<module>../../bundles/org.eclipse.gmf.tests.runtime.common.ui.services.action</module>
		<module>../../bundles/org.eclipse.gmf.tests.runtime.common.ui.services.provider</module>
		<module>../../bundles/org.eclipse.gmf.tests.runtime.diagram.ui</module>
		<module>../../bundles/org.eclipse.gmf.tests.runtime.draw2d.ui</module>
		<module>../../bundles/org.eclipse.gmf.tests.runtime.draw2d.ui.render</module>
		<module>../../bundles/org.eclipse.gmf.tests.runtime.emf.clipboard.core</module>
		<module>../../bundles/org.eclipse.gmf.tests.runtime.emf.commands.core</module>
		<module>../../bundles/org.eclipse.gmf.tests.runtime.emf.core</module>
		<module>../../bundles/org.eclipse.gmf.tests.runtime.emf.type.core</module>
		<module>../../bundles/org.eclipse.gmf.tests.runtime.emf.type.ui</module>
		<module>../../bundles/org.eclipse.gmf.tests.runtime.emf.ui</module>
		<module>../../bundles/org.eclipse.gmf.tests.runtime.emf.ui.properties</module>
		<module>../../bundles/org.eclipse.gmf.tests.runtime.gef.ui</module>
		<module>../../features/org.eclipse.gmf.runtime-feature</module>
		<module>../../features/org.eclipse.gmf.source-feature</module>
		<module>../../features/org.eclipse.gmf.runtime.thirdparty-feature</module>
		<module>../../features/org.eclipse.gmf.runtime.thirdparty.source-feature</module>
		<module>../../features/org.eclipse.gmf.examples.runtime-feature</module>
		<module>../../features/org.eclipse.gmf.examples.runtime.ui.pde-feature</module>
		<module>../../features/org.eclipse.gmf.runtime.sdk-feature</module>
		<module>../../features/org.eclipse.gmf.tests.runtime-feature</module>
		<module>../org.eclipse.gmf.runtime.repository</module>
	</modules>

</project>
